Update 'sebnsg3rz-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:4368cdfe841f5494104561164ce900ed58bf8cf7@sha256:18558cd98f615643c562bc3742218ac4d3a001609e29ba223863dae71411ee3c

--- a/components/sebnsg3rz-python/overlays/development/deployment-patch.yaml
+++ b/components/sebnsg3rz-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sebnsg3rz-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:4368cdfe841f5494104561164ce900ed58bf8cf7@sha256:18558cd98f615643c562bc3742218ac4d3a001609e29ba223863dae71411ee3c
+          name: container-image
